# efcp

./: Cargo.toml  README.md
addr/: Cargo.toml
addr/src/: lib.rs
channel/: Cargo.toml
channel/src/: lib.rs
dtcp/: Cargo.toml
dtcp/src/: lib.rs  packet.rs  retransmission.rs
dtp/: Cargo.toml
dtp/src/: dtp.rs  lib.rs  packet.rs  socket.rs  udp.rs
dtp/src/platform/: fallback.rs  mod.rs  unix.rs
efcp/: Cargo.toml
efcp/src/: error.rs  lib.rs  negotiation.rs  packet.rs  secure.rs
notes/: dtcp.rs  packet.rs
src/: constants.rs  dtcp.rs  dtp.rs  lib.rs  packet.rs
test-channel/: Cargo.toml
test-channel/src/: lib.rs
