[package]
name = "dtcp"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-std = "0.99"
async-trait = "0.1"
byteorder = "1.3"
bytes = "0.4"
channel = { path = "../channel" }
crossbeam = "0.7"
dtp = { path = "../dtp" }
futures-timer = "1.0"

[dev-dependencies]
test-channel = { path = "../test-channel" }
