[package]
name = "efcp"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-std = "0.99"
async-trait = "0.1"
byteorder = "1.3"
bytes = "0.4"
channel = { path = "../channel" }
disco = { git = "https://github.com/rust-p2p/disco" }
dtp = { path = "../dtp" }
dtcp = { path = "../dtcp" }
failure = "0.1"
